# delta-sharing-rust-client

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: main.yml
examples/: async.rs  blocking.rs
resources/: test.parquet.format
resources/test/: test.parquet
src/: application.rs  client.rs  lib.rs  protocol.rs  reader.rs  utils.rs
src/blocking/: client.rs  mod.rs
tests/: application.rs  blocking.rs  client.rs
tests/common/: mod.rs
