[package]
name = "delta-sharing"
version = "0.1.0"
authors = ["Nikolay Ulmasov ulmasov@hotmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
parquet = "14.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.2"
rustc_version_runtime = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
polars = { version = "0.22.8", features = ["lazy", "parquet"] }

[dev-dependencies]
wiremock = "0.5"
futures = "0.3"
uuid = { version = "1.1", features = ["v4"] }