[package]
name = "delta-sharing"
version = "0.1.0"
authors = ["Nikolay Ulmasov ulmasov@hotmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
blocking = ["reqwest/blocking"]

[[example]]
name = "async"

[[example]]
name = "blocking"
required-features = ["blocking"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread",] }
parquet = "14.0.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2"
rustc_version_runtime = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
polars = { version = "0.22.8", features = ["lazy", "parquet"] }

[dev-dependencies]
wiremock = "0.5"
uuid = { version = "1.1", features = ["v4"] }
tokio-test = { version = "0.4" }