[package]
name = "delta-sharing"
version = "0.1.0"
authors = ["Nikolay Ulmasov <ulmasov@hotmail.com>"]
license = "Apache-2.0"
description = "Delta Sharing client library"
readme = "README.md"
keywords = ["delta", "delta-sharing"]
categories = ["api-bindings", "database"]
repository = "https://github.com/r3stl355/delta-sharing-rust-client"
documentation = "https://docs.rs/delta-sharing"
edition = "2021"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[features]
blocking = ["reqwest/blocking"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread",] }
parquet = "14.0.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2"
rustc_version_runtime = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
polars = { version = "0.22.8", features = ["lazy", "parquet"] }

[dev-dependencies]
wiremock = "0.5"
uuid = { version = "1.1", features = ["v4"] }
tokio-test = { version = "0.4" }
rand = "0.8.5"
test-case = "2.2.1"

[[example]]
name = "async"
path = "examples/async.rs"

[[example]]
name = "blocking"
path = "examples/blocking.rs"
required-features = ["blocking"]

[[test]]
name = "blocking"
path = "tests/blocking.rs"
required-features = ["blocking"]